versioned_docs/version-3.3.2/changelog.mdx
---
title: Nouveautés
---

import SuggestionLink from '@site/src/components/SuggestionLink';

Découvrez la liste détaillée des modifications qui ont été apportées à RaidProtect.

## 3.3.2 (20/03/2026) {#3-3-2}

- Nouveau système **[Authentication Manager](./features/authentication-manager.mdx)** (AM) pour protéger l'accès aux rôles Discord par authentification.
  - Nouvelle [commande `/auth`](./features/authentication-manager.mdx#auth) pour s'authentifier et obtenir un rôle protégé.
  - Nouvelle [commande `/auth-profile`](./features/authentication-manager.mdx#auth-profile) pour gérer son profil d'authentification (PIN, OTP, passkeys).
  - Nouvelle [commande `/auth-settings`](./features/authentication-manager.mdx#auth-settings) pour configurer les rôles protégés et les utilisateurs autorisés.
  - Système de [grades de sécurité](./features/authentication-manager.mdx#grades) (S à E) basé sur les méthodes configurées.
  - Support des [passkeys (WebAuthn)](./features/authentication-manager.mdx#methods), [codes PIN](./features/authentication-manager.mdx#methods) (simple et renforcé) et [OTP (2FA)](./features/authentication-manager.mdx#methods).
  - Sessions temporaires avec expiration et révocation automatique.
  - Système de managers avec plafond de permissions.
- Logs :
  - Nouveau moteur de logs en prévision d'une mise à jour dédiée.
  - Logs de suppression en masse du `/clear`.
  - Logs des modifications des paramètres Anti-Scam et Auto RaidMode.
- Nouveau système **Premium**.
  - Limites augmentées pour l'Authentication Manager et les panneaux d'information.
  - [Noms des sanctions](./features/sanctions.mdx#custom-names) personnalisables (nom, verbe et formulation en MP).
  - Accès en avant-première aux nouvelles fonctionnalités expérimentales.
- Détection et empêchement de l'usurpation de RaidProtect.
- Correction :
  - Correction des erreurs de unmute et untimeout.
  - Correction du setup du Jail.
  - Correction de l'"antispam bloqué" sur certains serveurs.
  - Corrections de traductions diverses.
- Performances et stabilité :
  - Optimisation du cache des membres, des permissions et des messages.
  - Les expirations des sanctions sont désormais précises à la seconde.

## 3.3.1 (09/02/2026) {#3-3-1}

- [Internationalisation](./language.md) (ajout de l'allemand, l'espagnol et le portugais).
- Nouveau système de **[Jail](./features/sanctions.mdx#jail)**.
  - Nouvelle [commande `/jail`](./features/moderation.mdx#jail) pour emprisonner un membre.
  - Nouvelle [commande `/tempjail`](./features/moderation.mdx#tempjail) pour emprisonner temporairement un membre.
  - Nouvelle [commande `/unjail`](./features/moderation.mdx#unjail) pour libérer un membre.
  - Configuration du rôle Jail et du salon d'information via `/settings`.
- Nouveau système de **[Mute par rôle](./features/sanctions.mdx#mute)** : au-delà d'un [seuil configurable](./features/sanctions.mdx#mute-threshold), le bot attribue un rôle Mute au lieu du timeout Discord.
  - Les commandes `/timeout` et `/untimeout` deviennent [`/mute`](./features/moderation.mdx#timeout) et [`/unmute`](./features/moderation.mdx#untimeout). Le timeout Discord reste utilisé par défaut en dessous du seuil.
  - Nouveau paramètre `[force_timeout]` pour forcer le timeout Discord quelle que soit la durée.
- [Sanctionner via le menu contextuel](./features/moderation.mdx#context-menu) (clic droit sur un profil).
- Nouvelle [commande `/my-sanctions`](./features/utilities.mdx#my-sanctions) pour permettre aux membres de consulter leurs propres sanctions.
- Nouveau paramètre [Confidentialité des sanctions](./features/sanctions.mdx#sanctions-privacy) pour contrôler l'accès aux sanctions personnelles.
- Nouveau paramètre [Afficher les médias](./features/sanctions.mdx#show-medias) dans les raisons de sanctions.
- Refonte visuelle des filtres dans [`/sanctions search`](./features/sanctions.mdx#search) et ajout du filtre [type de modérateur](./features/sanctions.mdx#search).
- [Import / Export des sanctions](./features/sanctions.mdx#import-export) via le bot support.
- Système de **[Panneaux d'information](./features/display.mdx)** (`/display public`).
- Nouveau système de **[blocage de membres](./features/utilities.mdx#block)** de certaines fonctionnalités de RaidProtect sur un serveur.
  - Nouvelle [commande `/block add`](./features/utilities.mdx#block-add).
  - Nouvelle [commande `/block remove`](./features/utilities.mdx#block-remove).
  - Nouvelle [commande `/block list`](./features/utilities.mdx#block-list).
- Nouvelle [commande `/prune`](./features/utilities.mdx#prune) pour congédier les membres inactifs avec des conditions plus précises. <SuggestionLink id="256" />
- Nouvelle [commande `/channel clear`](./features/utilities.mdx#channel-clear) pour supprimer et re-créer un salon. <SuggestionLink id="543" />
- Logs pour les commandes `/bypass`. <SuggestionLink id="546" />
- Nouveau module **Anti-Scam**.
- Correction :
  - Amélioration de la gestion du captcha.
  - Correction de la validation des préfixes.
  - Corrections de traductions.
- Performances et stabilité :
  - Nouveau framework de traduction ([`@fca.gg/hermes` v1.2.1](https://github.com/FCAgreatgoals/hermes)).

## 3.3.0 (19/12/2025) {#3-3-0}

- Nouvelle fonctionnalité **[Historique des sanctions](./features/sanctions.mdx)**.
  - Nouvelle [commande `/sanctions search`](./features/sanctions.mdx#search).
  - Nouvelle [commande `/sanctions info`](./features/sanctions.mdx#info).
  - Nouvelle [commande `/sanctions edit`](./features/sanctions.mdx#edit).
  - Nouvelle [commande `/sanctions delete`](./features/sanctions.mdx#delete).
  - Les sanctions de l’automod sont ajoutées à l’historique des sanctions.
  - Les bannissements, expulsions et timeouts sont ajoutés à l’historique et loggés. <SuggestionLink id="151" />
  - Accusé de réception du message privé de notification de sanction.
- Nouveaux logs pour les sanctions.
- Possibilité de configurer un salon de logs dédié aux sanctions.
- Nouvelle [commande `/warn`](./features/moderation.mdx#warn). <SuggestionLink id="52" />
- Nouvelle [commande `/untimeout`](./features/moderation.mdx#untimeout). <SuggestionLink id="52" />
- Nouvelle [commande `/tempban`](./features/moderation.mdx#tempban). <SuggestionLink id="524" />
- Le [RaidMode](./features/raid-mode.md#raid-mode) et l’[Auto RaidMode](./features/raid-mode.md#duration) se désactivent automatiquement après un certain temps. <SuggestionLink id="37" />
- Nouveau paramètre [durée] pour la [commande `/raidmode`](./features/raid-mode.md#raid-mode). <SuggestionLink id="37" />
- Nouvelle [commande `/joinlock`](./features/join-lock.mdx) pour fermer les invitations indéfiniment.
- Nouvelle [commande `/channel duplicate`](./features/utilities.mdx#channel-duplicate) pour dupliquer strictement un salon. <SuggestionLink id="225" />
- Nouvelle commande `/changelog` et boutons dans le `/settings` et le `/about` pour consulter le changelog.
- Accusé de réception du message privé de l’[Âge minimum](./features/raid-mode.md#minage).
- Correction :
  - Amélioration de la gestion des cooldowns.
  - Correction de diverses erreurs de traduction.
  - Augmentation de la taille maximale des raisons de sanctions (512).
- Performances et stabilité :
  - Optimisation du cache des messages.
  - Optimisation du stockage en base de données.
  - Gestion des expirations de sanctions (`@fca.gg/midway` v1.3.2).
  - Refonte de la gestion des emojis ([`@fca.gg/glyph` v1.1.1](https://github.com/FCAgreatgoals/glyph)).

## 3.2.1 (03/09/2025) {#3-2-1}

- Nouvelle [commande `/ds`](./features/utilities.mdx#discord-sanctions) permettant de consulter les sanctions Discord d'un utilisateur.
- L'anti-spam est désormais capable de stopper le spam de Commandes Slash.
- Nouveau déclencheur d'anti-spam : [Spam de commandes externes](./features/anti-spam.mdx#triggers).
- Nouvelle [commande `/slowmode`](./features/moderation.mdx#slowmode) permettant d’activer ou de modifier le mode lent d’un salon.
- Nouvelle [commande `/unban`](./features/moderation.mdx#unban). <SuggestionLink id="296" />
- Nouvelle [commande `/bypass captcha`](./features/captcha.md#bypass) pour accepter un utilisateur qui ne parvient pas à résoudre le captcha.
- Nouveau paramètre [raison] pour les [commandes `/lock` et `/unlock`](./features/channel-lock.md). <SuggestionLink id="516" />
- Correction :
  - Diverses erreurs de traduction.
  - Meilleure prise en compte de la **raison** dans la commande `/timeout`.
  - Optimisations du temps de démarrage du bot et du temps d’exécution des commandes.
  - Corrections sur l’interprétation et la validation des commandes par préfix.
  - Correction des erreurs liées aux **avatars par défaut**.

## 3.2.0 (10/07/2025) {#3-2-0}

- Nouvelle fonctionnalité [Fermeture des MP](./features/dm-lock.mdx).
- Choix des [sanctions](./features/anti-spam.mdx#triggers) appliquées par l'anti-spam. <SuggestionLink id="85" />
- Nouvelles [logs d'anti-spam](./features/anti-spam.mdx#logs) (plus de visibilité sur les détections).
- Activation d'un [âge minimum de compte](./features/raid-mode.md#minage) sans captcha. <SuggestionLink id="314" />
- Nouvelle [commande /bypass minage](./features/raid-mode.md#bypass-minage) pour accepter un utilisateur qui n'a pas l'âge de compte requis. <SuggestionLink id="447" />
- Refonte total de la [commande `/userinfo`](./features/utilities.mdx#userinfo).
- Nouvelles logs lors des modifications importantes de la configuration du bot.
- Correction :
  - L'anti-spam fonctionne désormais dans les threads.
  - La [commande `/lock`](./features/channel-lock.md) supporte désormais les salons forums, médias et bloque les threads avec les salons.
  - Le [captcha](./features/captcha.md) ne bloque plus les nouveaux membres quand le bot n’a pas les permissions nécessaires.
  - Correction du bug de la [commande `/clear`](./features/moderation.mdx#clear) quand le bot n’a pas les permissions nécessaires dans un salon.
- UI/UX améliorée :
  - Précision sur la possibilité d’écrire dans les select menu de membre, rôle et salon.
  - Vérification de la présence de la fonctionnalité `COMMUNITY` lors de la configuration de l’Auto Raid Mode.
- Performances et stabilité :
  - Refonte gestion des emojis ([`@fca.gg/glyph` v0.1.0](https://github.com/FCAgreatgoals/glyph)).
  - Réduction du temps de démarrage et monitoring des clusters (`@fca.gg/midway` v1.3.1).
  - Meilleure gestion des rate limit et réduction de latences (`@fca.gg/iris` v1.1.4).
  - Intégration de Sentry pour la gestion des erreurs et amélioration du support dev ([`@fca.gg/kino` v1.0.0](https://github.com/FCAgreatgoals/kino)).

## 3.1.1 (21/05/2025) {#3-1-1}

- Nouvelle fonctionnalité [Tag de Rôle](./features/tag-role.md). <SuggestionLink id="512" />
- Nouvelle commande de modération [`/timeout`](./features/moderation.mdx#timeout). <SuggestionLink id="52" />
- Suivi automatique des mises à jour dans le salon de logs général de chaque serveur.
- Performances et stabilité :
  - Nettoyage des états persistants de l’antispam.
  - Correction des fuites mémoires.
  - Optimisation des appels à la base de données.
  - Amélioration de la rapidité globale du bot.

## 3.1.0 (12/03/2025) {#3-1-0}

- Ajout des **Commandes Slash**. <SuggestionLink id="463" />
- [Internationalisation](./language.md) (ajout de l'anglais). <SuggestionLink id="109" />
- Nouvelle fonctionnalité [`/report`](./features/reports.md). <SuggestionLink id="164" />
- Nouvelles commandes de configuration :
  - [`/settings`](./setup.md#settings) sous forme de pannel interactif.
  - [`/setup`](./setup.md#install) sous forme d'Onboarding.
- Paramétrage avancé :
  - Activer/désactiver chaque fonctionnalité individuellement. <SuggestionLink id="356" />
  - Choix du délai et du nombre de tentatives avant expulsion par le [captcha](./features/captcha.md#config). <SuggestionLink id="363" />
  - Choix du salon de vérification pour le [captcha](./features/captcha.md) possible. <SuggestionLink id="385" />
  - Ignorer utilisateurs/rôles/catégories dans l'[antispam](./features/anti-spam.mdx#ignore). <SuggestionLink id="362" />
  - Choix du [préfixe des commandes hybrides](./guides/prefix.md). <SuggestionLink id="103" />
  - Option pour choisir si la [commande `/lock`](./features/channel-lock.md) renomme le salon verrouillé avec `🔒`.
- UX améliorée :
  - Préfixe affiché au ping du bot + mention comme préfixe universel. <SuggestionLink id="193" />
  - Désactiver le [captcha](./features/captcha.md) ne supprime plus le rôle et le salon associés. <SuggestionLink id="43" />
  - Détection automatique des problèmes de permissions liés aux salons et aux rôles. <SuggestionLink id="65" />
  - Contrôle automatique de la visibilité du salon de vérification dans le processus d’accueil de Discord.
  - Uniformisation des messages.
- Amélioration des performances et stabilité du bot.

## 3.0.0 (14/01/2023) {#3-0-0}

- Réécriture complète visant à préparer les futures mises à jour et à stabiliser le bot.
- Correction de tous les bugs connus à ce jour.
- La [commande `?raidmode`](./features/raid-mode.md) utilise désormais la fonctionnalité "Désactiver les invitations".
- Envoi automatique d’un message privé au membre concerné lors de l’application d’une sanction. <SuggestionLink id="426" />

## 2.2.0 (13/04/2020) {#2-2-0}

- Amélioration des performances du bot.
- Importantes modifications dans l'architecture interne du projet.

## 2.1.3 (13/10/2019) {#2-1-3}

- Suppression de la liste noire et des commandes associées.
- Possibilité de bannir n'importe quel utilisateur avec son identifiant, même s'il n'est pas dans le serveur concerné. <SuggestionLink id="113" /> <SuggestionLink id="148" />
- Affichage de la raison du bannissement dans la réponse de la [commande `?ban`](./features/moderation.mdx#ban).
- La [commande `?raidmode`](./features/raid-mode.md) nécessite désormais la permission d'expulser des membres.
- Modification du temps d'expulsion si le captcha n'est pas complété (5 min). <SuggestionLink id="129" />
- Améliorations internes diverses.

## 2.1.2 (17/04/2019) {#2-1-2}

- Ajout de la [commande `?userinfo`](./features/utilities.mdx#userinfo). <SuggestionLink id="29" />
- ~~Ajout des commandes `?lockall` et `?unlockall`~~ (Fonctionnalité supprimée).
- Ajout des commandes [`?kick`](./features/moderation.mdx#kick) et [`?ban`](./features/moderation.mdx#ban).
- Ajout du [min-age sur le captcha](./features/raid-mode.md#minage) (possibilité de définir un âge minimum de compte pour accéder au serveur).
- Possibilité de configurer la suppression automatique des messages d'invocation de commandes. <SuggestionLink id="26" />
- Le salon logs se recrée automatiquement s’il a été supprimé.
- Refonte de la connexion à la base de données.
- Correction de bugs et améliorations diverses.

## 2.1.1 (21/02/2019) {#2-1-1}

- Suppression du `?settings captcha` (remplacement par `?captcha`).
- Ajout de la possibilité de définir un [salon de logs](./features/captcha.md#logs) pour le captcha.
- Ajout d'un [autorole](./features/captcha.md#autorole) compatible avec le captcha.
- Simplification du [captcha](./features/captcha.md) (5/6 lettres bonnes nécessaires).
- Autres modifications mineures.

## 2.1.0 (16/02/2019) {#2-1-0}

- Ajout du captcha (`?settings captcha`). <SuggestionLink id="11" />
- Ajout du niveau de sécurité de l'anti-spam (`?settings spamlevel`). <SuggestionLink id="25" />
- Ajout des commandes `?about` et `?invite`.
- Ajout de la [commande `?clear`](./features/moderation.mdx#clear).
- Diverses modifications et corrections de bugs.

## 2.0.1 (04/02/2019) {#2-0-1}

- Réécriture de l'aide (`?help`).
- Suppression de bugs dans [`?lock`](./features/channel-lock.md#lock) et [`?unlock`](./features/channel-lock.md#unlock).

## 2.0.0 (26/01/2019) {#2-0-0}

- Ajout de l'[anti-spam](./features/anti-spam.mdx).
- Ajout du [mode raid automatique](./features/raid-mode.md#config).
- Ajout du salon de logs.
- Ajout de la configuration du bot.
- Ajout du [verrouillage de salons](./features/channel-lock.md).
- Nombreuses modifications diverses.